<resources>
    <string name="app_name">My Notes</string>
    <string name="introduction">No notes available. You can add new notes by clicking on the add note button.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="save_note">Save Note</string>
    <string name="delete_all">Delete All Notes</string>
    <string name="delete_all_dialog">Are you sure you want to delete all notes?</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_note_dialog">Are you sure you want to delete this note?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_category">No Category</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="add_category">Add a New Category</string>
    <string name="all_notes">All Notes</string>
    <string name="show_all_notes">Show All Notes</string>
    <string name="blue">blue</string>
    <string name="green">green</string>
    <string name="yellow">yellow</string>
    <string name="light_yellow">light_yellow</string>
    <string name="pink">pink</string>
    <string name="colors">Colors:</string>
    <string name="NotesFragment">NotesFragment</string>
    <string name="NotesByCategoryFragment">NotesByCategoryFragment</string>
</resources>