<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AddNoteFragment">

    <data>
        <variable
            name="viewModel"
            type="com.iansui.mynotes.viewmodel.NotesViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yellow_200"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/category_edit_text"
                style="@style/EditTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:hint="@string/category"
                android:ems="10"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/title_edit_text"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/title"
                android:imeOptions="actionDone"
                android:inputType="text" />

            <EditText
                android:id="@+id/desc_edit_text"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/description"
                android:maxLines="25"
                android:inputType="text"
                android:scrollHorizontally="false"/>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_save_note"
            style="@style/FabStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/save_note"
            android:focusable="true"
            app:srcCompat="@drawable/ic_check" />

    </FrameLayout>
</layout>
