<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/notesFragment">

    <fragment
        android:id="@+id/notesFragment"
        android:name="com.iansui.mynotes.ui.NotesFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_notes" >
        <action
            android:id="@+id/action_notesFragment_to_addNoteFragment"
            app:destination="@id/addNoteFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_notesFragment_to_editNoteFragment"
            app:destination="@id/editNoteFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_notesFragment_to_notesByCategoryFragment"
            app:destination="@id/notesByCategoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/addNoteFragment"
        android:name="com.iansui.mynotes.ui.AddNoteFragment"
        android:label="@string/add_note"
        tools:layout="@layout/fragment_add_note" >
        <action
            android:id="@+id/action_addNoteFragment_to_notesFragment"
            app:destination="@id/notesFragment"
            app:launchSingleTop="false"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_addNoteFragment_to_notesByCategoryFragment"
            app:destination="@id/notesByCategoryFragment"
            app:launchSingleTop="false"
            app:popUpTo="@id/notesByCategoryFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="category"
            app:argType="string" />
        <argument
            android:name="destination"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/editNoteFragment"
        android:name="com.iansui.mynotes.ui.EditNoteFragment"
        android:label="@string/edit_note"
        tools:layout="@layout/fragment_edit_note" >
        <action
            android:id="@+id/action_editNoteFragment_to_notesFragment"
            app:destination="@id/notesFragment"
            app:launchSingleTop="false"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <argument
            android:name="id"
            app:argType="integer" />
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="description"
            app:argType="string" />
        <argument
            android:name="category"
            app:argType="string" />
        <argument
            android:name="color"
            app:argType="string" />
        <action
            android:id="@+id/action_editNoteFragment_to_notesByCategoryFragment"
            app:destination="@id/notesByCategoryFragment"
            app:launchSingleTop="false"
            app:popUpTo="@id/notesByCategoryFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="destination"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/notesByCategoryFragment"
        android:name="com.iansui.mynotes.ui.NotesByCategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_notes_by_category" >
        <action
            android:id="@+id/action_notesByCategoryFragment_to_editNoteFragment"
            app:destination="@id/editNoteFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_notesByCategoryFragment_to_addNoteFragment"
            app:destination="@id/addNoteFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.iansui.mynotes.ui.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories" />
</navigation>