<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.EditNoteFragment">

    <data>
        <variable
            name="viewModel"
            type="com.iansui.mynotes.viewmodel.NotesViewModel" />
        <variable
            name="fragment"
            type="com.iansui.mynotes.ui.EditNoteFragment" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_view_margin"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:id="@+id/edit_note_main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yellow_200"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/category_edit_text"
                style="@style/EditTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:hint="@string/category"
                android:text="@{viewModel.category}"
                android:ems="10"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/title_edit_text"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/title"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:text="@{viewModel.title}" />

            <EditText
                android:id="@+id/desc_edit_text"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/description"
                android:maxLines="5"
                android:text="@{viewModel.description}"
                android:inputType="text"
                android:scrollHorizontally="false"/>

            <TextView
                android:id="@+id/colors_text"
                style="@style/ColorTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colors" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/color_blue"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/small_circle"
                    app:backgroundTint="@color/blue"/>

                <Button
                    android:id="@+id/color_green"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/small_circle"
                    app:backgroundTint="@color/green" />

                <Button
                    android:id="@+id/color_yellow"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/small_circle"
                    app:backgroundTint="@color/yellow" />

                <Button
                    android:id="@+id/color_light_yellow"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/small_circle"
                    app:backgroundTint="@color/yellow_200" />

                <Button
                    android:id="@+id/color_pink"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/small_circle"
                    app:backgroundTint="@color/pink" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_save_note"
                style="@style/FabStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/save_note"
                android:focusable="true"
                app:srcCompat="@drawable/ic_check" />

        </androidx.cardview.widget.CardView>

</layout>